--- a/Numeric Matrix Processor/Matrix by matrix multiplication/task-info.yaml
+++ b/Numeric Matrix Processor/Matrix by matrix multiplication/task-info.yaml
@@ -302,5 +302,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/60/stages/325/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 18 Dec 2020 09:12:00 UTC
 record: -1
